# Engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  SetupDeps.bat  vsconfig.cmake
EngineLib/src/: Engine.hpp  OurEngine.hpp  types.hpp
EngineLib/src/Application/: Application.hpp  Application.impl.hpp
EngineLib/src/Core/: Allocator.hpp  Allocator.impl.hpp  Buffer.cpp  Buffer.hpp  Buffer.inl  Core.hpp  EngineInfo.hpp  Error.hpp  Log.cpp  Log.hpp  Ref.cpp  Ref.hpp  Ref.impl.hpp  Result.hpp  Timer.hpp  Timestep.cpp  Timestep.hpp
EngineLib/src/Keyboard/: Keyboard.cpp  Keyboard.hpp
EngineLib/src/Layer/: Layer.cpp  Layer.hpp  LayerStack.hpp  LayerStack.impl.hpp
EngineLib/src/Platform/: WindowInstance.hpp
EngineLib/src/Renderer/: CommandPool.cpp  CommandPool.hpp  DebugMessanger.cpp  DebugMessanger.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  Image.hpp  Image_impl.hpp  MemoryBuffer.cpp  MemoryBuffer.hpp  Renderer.hpp  RendererContext.cpp  RendererContext.hpp  RendererSpec.hpp  Renderer_impl.hpp  Shader.cpp  Shader.hpp  UniformBuffer.cpp  UniformBuffer.hpp  VulkanContext.cpp  VulkanContext.hpp  VulkanSpec.hpp  Window.cpp  Window.hpp
EngineLib/src/Window/: Win32Window.cpp  Win32Window.hpp  Window.cpp  Window.hpp
Sandbox/src/: SandboxLayer.hpp  main.cpp
scripts/: Setup.py  SetupVulkan.py
